# AWS-contest

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: fixer.md  researcher.md  reviewer.md
.claude/hooks/: post-edit-check.mjs  pre-bash-guard.mjs  stop-check.mjs
.claude/rules/: backend.md  db.md  infra.md
.claude/skills/code-review/: SKILL.md
.claude/skills/conventional-commit/: SKILL.md
.claude/skills/db-migration/: SKILL.md
.claude/skills/dynamodb-design/: SKILL.md
.claude/skills/test-writer/: SKILL.md
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: auth.rs  aws.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  util.rs
backend/api/src/llm/: bedrock.rs  fake.rs  glossary.rs  mod.rs  prompt.rs
backend/api/src/media/: fake.rs  mod.rs  s3.rs  transcribe_aws.rs
backend/api/src/repository/: dynamo.rs  memory.rs  mod.rs
backend/api/src/routes/: demo.rs  mod.rs  records.rs  residents.rs  summaries.rs  transcribe.rs
backend/api/src/services/: demo.rs  mod.rs  records.rs  residents.rs  summaries.rs  transcribe.rs
backend/api/tests/: dynamo_local.rs  routes.rs
backend/domain/: Cargo.toml
backend/domain/src/: keys.rs  lib.rs  shift.rs
backend/summarizer/: Cargo.toml
backend/summarizer/src/: main.rs
docs/: design.md
frontend/: .npmrc  index.html  package-lock.json  package.json  preview.html  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  preview.tsx  types.ts  vite-env.d.ts
frontend/src/components/: AppName.tsx  BottomNav.tsx  ConfirmDialog.tsx  Layout.tsx  Segmented.tsx  Sidebar.tsx  WabisukeMark.tsx  badges.tsx  nav.ts  ui.tsx
frontend/src/components/__tests__/: AppName.test.tsx  badges.test.tsx
frontend/src/lib/: amplify.ts  api.ts  appContext.tsx  auth.tsx  authEvents.ts  cn.ts  config.ts  constants.ts  i18n.ts  queries.ts  schemas.ts
frontend/src/lib/__tests__/: config.test.ts
frontend/src/pages/: BaselinePage.tsx  HomePage.tsx  LoginPage.tsx  RecordsPage.tsx  ResidentsPage.tsx  SummariesPage.tsx
frontend/src/pages/__tests__/: BaselinePage.test.tsx  HomePage.test.tsx  RecordsPage.test.tsx
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: handover-stack.ts
