[workspace]
resolver = "2"
members = ["domain", "api", "summarizer"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
axum = "0.8"
lambda_http = "0.14"
lambda_runtime = "0.14"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
