[workspace]
resolver = "2"
members = ["domain", "api", "summarizer"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
domain = { path = "domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
lambda_http = "0.14"
lambda_runtime = "0.14"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# AWS SDK: aws-lc-sys(cmake/NASM要求)を避けるため default の https クライアントを外し、
# ring バックエンドの rustls を明示注入する(main で http_client を build_https して渡す)。
# これによりホスト(Windows)の cargo check と arm64 クロスコンパイル双方でネイティブビルド依存を回避する。
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-dynamodb = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-smithy-http-client = { version = "1", default-features = false, features = ["rustls-ring"] }
aws-smithy-runtime-api = { version = "1", features = ["client"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
ulid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
http = "1"
