[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true }
axum = { workspace = true }
lambda_http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-transcribe = { workspace = true }
aws-smithy-http-client = { workspace = true }
serde_dynamo = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
