[package]
name = "summarizer"
version.workspace = true
edition.workspace = true

[dependencies]
# api をライブラリとして再利用し、サマリ生成ロジック(services::summaries)を共有する。
api = { path = "../api" }
domain = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
